# RoboticsGroup21

./: .gitignore  README.md
ros-code/: frames.gv
ros-code/catkin_ws/src/locobot_simulation/: CMakeLists.txt  README.md  requirements.txt
ros-code/catkin_ws/src/locobot_simulation/config/: locobot_configs.gazebo
ros-code/catkin_ws/src/locobot_simulation/launch/: simulation.launch  simulation_project_allobjects.launch  xslocobot_description.launch  yolov5.launch
ros-code/catkin_ws/src/locobot_simulation/models/blue_circle/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/blue_target_area/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/box_1/: model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/objects/blue_big_ball/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/objects/blue_big_cylinder/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/objects/blue_cube/: model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/red_circle/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/red_target_area/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_ball_blue/: model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_ball_red/: model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_box_blue/: model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_box_red/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_cylinder_blue/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/models/small_cylinder_red/: model.config  model.sdf
ros-code/catkin_ws/src/locobot_simulation/msg/: DetectedObject.msg
ros-code/catkin_ws/src/locobot_simulation/plugins/: CMakeLists.txt  logical_camera_plugin.cpp  logical_camera_plugin.h
ros-code/catkin_ws/src/locobot_simulation/scripts/stream_reasoning/: trash.owl
ros-code/catkin_ws/src/locobot_simulation/urdf/: arm_cradle.urdf.xacro  battery.urdf.xacro  camera_tower.urdf.xacro  lidar.urdf.xacro  locobot_moveit.urdf  pan_and_tilt.urdf.xacro  plate.urdf.xacro
ros-code/catkin_ws/src/locobot_simulation/urdf/arms/: mobile_arm.urdf.xacro  mobile_wx250s.urdf.xacro
ros-code/catkin_ws/src/locobot_simulation/urdf/create3_version/: bump_caster.urdf.xacro  caster.urdf.xacro  locobot_create3.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
ros-code/catkin_ws/src/locobot_simulation/urdf/kobuki_version/: locobot_kobuki.urdf.xacro
ros-code/catkin_ws/src/locobot_simulation/worlds/: bsc_trash.world  office.world  project_sorting.world  project_sorting_all_objects.world  project_sorting_test.world  room_trash.world  tutorial_logical_camera.world  xslocobot_gazebo.world
(+25 files in other folders)
